Validated the HTML with https://html5.validator.nu/

--- a/Lab_1/index.html
+++ b/Lab_1/index.html
@@ -40,7 +40,7 @@
                 simply as a beverage, but the white pulp around the cocoa beans was likely used as a source of 
                 fermentable sugars for an alcoholic drink.</p>
             <figure>
-                <img src="Images/Mesoamerican1.jpg" alt="Funny dude carrying a cacao pod" width="10%" height="15%">
+                <img src="Images/Mesoamerican1.jpg" alt="Funny dude carrying a cacao pod" width="400">
                 <figcaption>Funny dude carrying a cacao pod</figcaption>
             </figure>
         </article>
@@ -62,7 +62,7 @@
                 something else, without there being contradiction; and they give these cocoas as alms to the poor who
                 beg for them.</p>
             <figure>
-                <img src="Images/European1.jpg" alt="Funny couple drinking chocolate" width="10%" height="15%">
+                <img src="Images/European1.jpg" alt="Funny couple drinking chocolate" width="340" >
                 <figcaption>Chocolate ad from the 20th century</figcaption>
             </figure>
         </article>
@@ -125,7 +125,7 @@
 <footer>
     <div>
         <H4>The information presented is not susceptible to copyright as most of it has been taken from the
-            internet without credit &#128512 </H4>
+            internet without credit &#128512; </H4>
 
         <svg width="1000" height="100">
             <rect width="400" height="100" style="fill:rgb(45,27,29);stroke-width:10;stroke:rgb(0,0,0)" />
