--- a/Lab_3/index.html
+++ b/Lab_3/index.html
@@ -71,6 +71,7 @@
 >>> fib(1000)
                 </pre>
                 <p class="result">0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987</p>
+                <button class="terminal">>_</button>
             </div>
             <div class="text">
                 <div class="textTitleDiv"><b class="textTitle">Functions Defined</b></div>
