Slight changes for presentation

--- a/Lab_5/index.html
+++ b/Lab_5/index.html
@@ -9,16 +9,24 @@
 </head>
 <body>
     <div class="desktop" id="d1">
-
+        <p>Home</p>
+        <img src="Images/p1.jpg">
+        <h4>SIIUUUUUU</h4>
     </div>
     <div class="desktop" id="d2">
-
+        <p>Work</p>
+        <img src="Images/p2.jpg">
+        <p>WORK WORK WORK</p>
     </div>
     <div class="desktop" id="d3">
-
+        <h3>LIVE LAUGH LOVE</h3>
+        <p>Family</p>
+        <img src="Images/p3.jpg">
     </div>
     <div class="desktop" id="d4">
-
+        <p>Games</p>
+        <img src="Images/p4.jpg">
+        <h1>Last played: CSGO</h1>
     </div>
 </body>
 </html>
