--- a/Lab_6/browse.html
+++ b/Lab_6/browse.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     <h1>Browse books</h1>
+
+    <button id="getAllBtn" onclick="getBooks(event)">Get Books</button>
+
+    <div id="books">
+
+    </div>
 </body>
 </html>
