--- a/Lab_6/add.html
+++ b/Lab_6/add.html
@@ -19,7 +19,7 @@
         <label for="author">Author</label>
         <input type="text" id="author" name="author">
         <label for="genre">Genre</label>
-        <input type="text" id="genre" name="author">
+        <input type="text" id="genre" name="genre">
         <label for="pages">Pages</label>
         <input type="number" id="pages" name="pages">
         <input id="submitAdd" type="submit" value="Submit" onclick="submitForAdd(event)">
